--- a/Assignment2/.classpath
+++ b/Assignment2/.classpath
@@ -1,10 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-1.4.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-benchmark-1.4.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate-1.4.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-jmh-1.4.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/hibernate-commons-annotations-4.0.2.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/hibernate-core-4.2.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/hibernate-entitymanager-4.2.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/hibernate-envers-4.2.5.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/jboss-logging-3.1.0.GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
