--- a/Assignment2/.classpath
+++ b/Assignment2/.classpath
@@ -21,5 +21,23 @@
 	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/jboss-logging-3.1.0.GA.jar"/>
 	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/jboss-transaction-api_1.1_spec-1.0.1.Final.jar"/>
 	<classpathentry kind="lib" path="C:/Users/lordo/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-1.4.15.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-benchmark-1.4.15.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-hibernate-1.4.15.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream-jmh-1.4.15.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/activation-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/cglib-nodep-2.2.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/jdom-1.1.3.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/jdom2-2.0.5.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/jettison-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/joda-time-1.6.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/kxml2-min-2.3.0.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/stax-1.2.0.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/wstx-asl-3.2.7.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/xmlpull-1.1.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/xom-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/Users/Brennon/Downloads/xstream-distribution-1.4.15-bin/xstream-1.4.15/lib/xstream/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
